--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
     "name": "skeleton-vue-typescript",
     "description": "A web frontend skeleton project with Vue.js, TypeScript, Bootstrap, Less, Webpack, and Jest.",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "license": "Apache-2.0",
     "private": true,
     "author": "Justus Bogner <jreb1990@gmail.com>",
     "scripts": {
-        "build": "webpack --config webpack.prod.config.js --json --progress | tail -n +2 > ./build.log.json",
+        "build": "webpack --config webpack.prod.config.js --progress",
         "start": "webpack-dev-server --open --hot --config webpack.dev.config.js",
         "start-prod": "webpack-dev-server --open --config webpack.prod.config.js",
         "lint": "tslint -c tslint.json src/**/*.ts",
-        "test": "jest"
+        "test": "jest",
+        "sonar": "sonar-scanner"
     },
     "jest": {
         "testURL": "http://localhost",
@@ -44,33 +45,35 @@
         "moment": "^2.22.2",
         "vue": "^2.5.17",
         "vue-class-component": "^6.2.0",
-        "vue-property-decorator": "^7.0.0",
+        "vue-property-decorator": "^7.1.1",
         "vue-router": "^3.0.1"
     },
     "devDependencies": {
         "@types/jest": "^23.0.0",
-        "@vue/test-utils": "^1.0.0-beta.16",
+        "@vue/test-utils": "^1.0.0-beta.25",
+        "clean-webpack-plugin": "^0.1.19",
         "css-loader": "^1.0.0",
-        "file-loader": "^1.1.11",
+        "file-loader": "^2.0.0",
         "git-revision-webpack-plugin": "^3.0.3",
+        "html-loader": "^0.5.5",
+        "html-webpack-plugin": "^3.2.0",
         "jest": "^23.0.1",
-        "less": "^3.8.0",
+        "less": "^3.8.1",
         "less-loader": "^4.1.0",
-        "progress-bar-webpack-plugin": "^1.11.0",
+        "sonarqube-scanner": "^2.1.1",
         "string-replace-loader": "^2.1.1",
         "ts-jest": "^22.4.6",
-        "ts-loader": "^4.4.2",
+        "ts-loader": "^5.2.1",
         "tslint": "^5.11.0",
         "tslint-loader": "^3.6.0",
         "tslint-webpack-plugin": "^1.2.2",
-        "typescript": "^3.0.1",
+        "typescript": "^3.1.1",
         "vue-jest": "^2.6.0",
-        "vue-loader": "^15.2.6",
+        "vue-loader": "^15.4.2",
         "vue-template-compiler": "^2.5.17",
-        "webpack": "^4.16.3",
-        "webpack-cli": "^3.1.0",
-        "webpack-dev-server": "^3.1.5",
-        "webpack-file-changer": "^2.0.1",
+        "webpack": "^4.20.2",
+        "webpack-cli": "^3.1.1",
+        "webpack-dev-server": "^3.1.9",
         "webpack-merge": "^4.1.4"
     }
 }
