--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,16 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "sourceMap": true,
-        "lib": [
-            "dom",
-            "dom.iterable",
-            "es2015",
-            "es2016",
-            "es2017"
-        ],
-        "module": "es2015",
+        "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
+        "module": "esnext",
+        "allowJs": true,
+        "importHelpers": true,
         "moduleResolution": "node",
+        "experimentalDecorators": true,
+        "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true
+        "sourceMap": true,
+        "baseUrl": "."
     },
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": ["node_modules"]
 }
