--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "author": "Justus Bogner <jreb1990@gmail.com>",
     "scripts": {
         "build": "webpack --config webpack.prod.config.js --progress",
-        "start": "webpack-dev-server --open --hot --config webpack.dev.config.js",
-        "start-prod": "webpack-dev-server --open --config webpack.prod.config.js",
+        "start": "webpack-dev-server --open --history-api-fallback --hot --config webpack.dev.config.js",
+        "start-prod": "webpack-dev-server --open --history-api-fallback --config webpack.prod.config.js",
         "lint": "tslint -c tslint.json src/**/*.ts",
         "test": "jest",
         "sonar": "sonar-scanner"
@@ -40,7 +40,7 @@
         "bootstrap": "^4.1.3",
         "bootstrap-vue": "^2.0.0-rc.11",
         "bootswatch": "^4.1.3",
-        "core-js": "^2.5.7",
+        "core-js": "^2.6.0",
         "moment": "^2.22.2",
         "vue": "^2.5.17",
         "vue-class-component": "^6.3.2",
@@ -48,16 +48,16 @@
         "vue-router": "^3.0.2"
     },
     "devDependencies": {
-        "@types/jest": "^23.3.9",
+        "@types/jest": "^23.3.10",
         "@vue/test-utils": "^1.0.0-beta.26",
         "clean-webpack-plugin": "^1.0.0",
-        "css-loader": "^1.0.1",
+        "css-loader": "^2.0.0",
         "file-loader": "^2.0.0",
         "git-revision-webpack-plugin": "^3.0.3",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "jest": "^23.6.0",
-        "less": "^3.8.1",
+        "less": "^3.9.0",
         "less-loader": "^4.1.0",
         "sonarqube-scanner": "^2.1.2",
         "string-replace-loader": "^2.1.1",
@@ -66,11 +66,11 @@
         "tslint": "^5.11.0",
         "tslint-loader": "^3.6.0",
         "tslint-webpack-plugin": "^1.3.0",
-        "typescript": "^3.1.6",
+        "typescript": "^3.2.2",
         "vue-jest": "^3.0.1",
         "vue-loader": "^15.4.2",
         "vue-template-compiler": "^2.5.17",
-        "webpack": "^4.26.1",
+        "webpack": "^4.27.1",
         "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^3.1.10",
         "webpack-merge": "^4.1.4"
