--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "skeleton-vue-typescript",
     "description": "A web frontend skeleton project with Vue.js, TypeScript, Bootstrap, Less, Webpack, and Jest.",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "license": "Apache-2.0",
     "author": "Justus Bogner <jreb1990@gmail.com>",
     "scripts": {
@@ -36,46 +36,47 @@
         ]
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.10",
-        "@fortawesome/free-solid-svg-icons": "^5.6.1",
-        "@fortawesome/vue-fontawesome": "^0.1.3",
-        "axios": "^0.18.0",
-        "bootstrap": "^4.1.3",
-        "bootstrap-vue": "^2.0.0-rc.11",
-        "bootswatch": "^4.1.3",
-        "core-js": "^2.6.1",
-        "moment": "^2.23.0",
-        "vue": "2.5.17",
-        "vue-class-component": "^6.3.2",
-        "vue-property-decorator": "^7.2.0",
-        "vue-router": "^3.0.2"
+        "@fortawesome/fontawesome-svg-core": "^1.2.21",
+        "@fortawesome/free-solid-svg-icons": "^5.10.1",
+        "@fortawesome/vue-fontawesome": "^0.1.6",
+        "axios": "^0.19.0",
+        "bootstrap": "^4.3.1",
+        "bootstrap-vue": "^2.0.0-rc.28",
+        "bootswatch": "^4.3.1",
+        "core-js": "^3.2.1",
+        "moment": "^2.24.0",
+        "vue": "2.6.10",
+        "vue-class-component": "^7.1.0",
+        "vue-property-decorator": "^8.2.1",
+        "vue-router": "^3.1.2"
     },
     "devDependencies": {
-        "@types/jest": "^23.3.10",
-        "@vue/test-utils": "^1.0.0-beta.27",
-        "clean-webpack-plugin": "^1.0.0",
-        "css-loader": "^2.0.1",
-        "file-loader": "^2.0.0",
+        "@types/jest": "^24.0.17",
+        "@vue/test-utils": "^1.0.0-beta.29",
+        "babel-core": "^6.26.3",
+        "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^3.2.0",
+        "file-loader": "^4.2.0",
         "git-revision-webpack-plugin": "^3.0.3",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
-        "jest": "^23.6.0",
-        "less": "^3.9.0",
-        "less-loader": "^4.1.0",
-        "sonarqube-scanner": "^2.1.2",
-        "string-replace-loader": "^2.1.1",
-        "ts-jest": "^23.10.5",
-        "ts-loader": "^5.3.1",
-        "tslint": "^5.12.0",
-        "tslint-loader": "^3.6.0",
-        "tslint-webpack-plugin": "^1.3.0",
-        "typescript": "^3.2.2",
-        "vue-jest": "^3.0.2",
-        "vue-loader": "^15.4.2",
-        "vue-template-compiler": "2.5.17",
-        "webpack": "^4.28.0",
-        "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.10",
-        "webpack-merge": "^4.1.5"
+        "jest": "^24.9.0",
+        "less": "^3.10.1",
+        "less-loader": "^5.0.0",
+        "sonarqube-scanner": "^2.5.0",
+        "string-replace-loader": "^2.2.0",
+        "ts-jest": "^24.0.2",
+        "ts-loader": "^6.0.4",
+        "tslint": "^5.18.0",
+        "tslint-loader": "^3.5.4",
+        "tslint-webpack-plugin": "^2.1.0",
+        "typescript": "^3.5.3",
+        "vue-jest": "^3.0.4",
+        "vue-loader": "^15.7.1",
+        "vue-template-compiler": "2.6.10",
+        "webpack": "^4.39.2",
+        "webpack-cli": "^3.3.7",
+        "webpack-dev-server": "^3.8.0",
+        "webpack-merge": "^4.2.1"
     }
 }
