--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "skeleton-vue-typescript",
     "description": "A web frontend skeleton project with Vue.js, TypeScript, Bootstrap, Less, Webpack, and Jest.",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "license": "Apache-2.0",
     "author": "Justus Bogner <jreb1990@gmail.com>",
     "scripts": {
@@ -36,47 +36,47 @@
         ]
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.21",
-        "@fortawesome/free-solid-svg-icons": "^5.10.1",
-        "@fortawesome/vue-fontawesome": "^0.1.6",
-        "axios": "^0.19.0",
-        "bootstrap": "^4.3.1",
-        "bootstrap-vue": "^2.0.0-rc.28",
-        "bootswatch": "^4.3.1",
-        "core-js": "^3.2.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.26",
+        "@fortawesome/free-solid-svg-icons": "^5.12.0",
+        "@fortawesome/vue-fontawesome": "^0.1.9",
+        "axios": "^0.19.1",
+        "bootstrap": "^4.4.1",
+        "bootstrap-vue": "^2.2.1",
+        "bootswatch": "^4.4.1",
+        "core-js": "^3.6.4",
         "moment": "^2.24.0",
-        "vue": "2.6.10",
-        "vue-class-component": "^7.1.0",
-        "vue-property-decorator": "^8.2.1",
-        "vue-router": "^3.1.2"
+        "vue": "2.6.11",
+        "vue-class-component": "^7.2.2",
+        "vue-property-decorator": "^8.3.0",
+        "vue-router": "^3.1.3"
     },
     "devDependencies": {
-        "@types/jest": "^24.0.17",
-        "@vue/test-utils": "^1.0.0-beta.29",
+        "@types/jest": "^24.0.25",
+        "@vue/test-utils": "^1.0.0-beta.30",
         "babel-core": "^6.26.3",
         "clean-webpack-plugin": "^3.0.0",
-        "css-loader": "^3.2.0",
-        "file-loader": "^4.2.0",
-        "git-revision-webpack-plugin": "^3.0.3",
+        "css-loader": "^3.4.2",
+        "file-loader": "^5.0.2",
+        "git-revision-webpack-plugin": "^3.0.4",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "jest": "^24.9.0",
-        "less": "^3.10.1",
+        "less": "^3.10.3",
         "less-loader": "^5.0.0",
         "sonarqube-scanner": "^2.5.0",
         "string-replace-loader": "^2.2.0",
-        "ts-jest": "^24.0.2",
-        "ts-loader": "^6.0.4",
-        "tslint": "^5.18.0",
+        "ts-jest": "^24.3.0",
+        "ts-loader": "^6.2.1",
+        "tslint": "^5.20.1",
         "tslint-loader": "^3.5.4",
         "tslint-webpack-plugin": "^2.1.0",
-        "typescript": "^3.5.3",
-        "vue-jest": "^3.0.4",
-        "vue-loader": "^15.7.1",
-        "vue-template-compiler": "2.6.10",
-        "webpack": "^4.39.2",
-        "webpack-cli": "^3.3.7",
-        "webpack-dev-server": "^3.8.0",
-        "webpack-merge": "^4.2.1"
+        "typescript": "^3.7.4",
+        "vue-jest": "^3.0.5",
+        "vue-loader": "^15.8.3",
+        "vue-template-compiler": "2.6.11",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10",
+        "webpack-dev-server": "^3.10.1",
+        "webpack-merge": "^4.2.2"
     }
 }
